# pico-106

./: CMakeLists.txt  Doxyfile  Makefile  README.md
Source/: AUTO.py  CMakeLists.txt  DCO.h  Pico106USBDevice.h  Synth.h  Table_gamma_8.cpp  Table_gamma_8.h  Voice.h  pico-106.cpp  pico106.cpp  pico106_native.cpp  pico106_rpipico.cpp  test_midi_in.cpp
Source/hw/: Config.h  MidiIn.h
docs/Model/: 2N2222.mdl  DCO.cir
docs/Schematics/: pico-106.kicad_prl  pico-106.kicad_pro  pico-106.kicad_sch
docs/Schematics/pico106/: pico106.kicad_prl  pico106.kicad_pro  pico106.kicad_sch
docs/pico-106 Project/: pico-106.als
